--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 						<ul class="entry-meta menu-z-index">
 							<li class="meta-privacy text-muted d-inline-block position-relative">
 								<div class="mt-1  mb-2 word-clamp-40">
-									<h6 class="text-nprofile text-ellipsis item-title mb-2 mt-0 word-clamp-40 text-profile-two "> @LanaKetty </h6>
+									<h6 class="text-nprofile text-ellipsis item-title mb-2 mt-0 word-clamp-40 text-profile-two "> @soraia.reisss </h6>
 								</div>
 							</li>
 						</ul>
@@ -279,7 +279,7 @@
 						<input type="checkbox" class="read-more-checker" id="read-more-checker">
 						<div class="limited l-200">
 <p class="margin-left-14">
-Uma morena japa fogosa, 21 aninhos, que adora realizar fantasias e fetiches. CONTEÚDO EXPLÍCITO 🔞 Vem ver eu dando, sentando, quicando chupando e sendo fodida bem gostoso de várias maneiras. 🫦 Vídeos, fotos e personalizados exclusivos faço também. Só me chamar! 🔥
+Uma morena gotosa, 21 aninhos, que adora realizar fantasias e fetiches. CONTEÚDO EXPLÍCITO 🔞 Vem ver eu dando, sentando, quicando chupando e sendo fodida bem gostoso de várias maneiras. 🫦 Vídeos, fotos e personalizados exclusivos faço também. Só me chamar! 🔥
 </p>
 <p></p>
 <p></p>
