--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 						<div class="align-items-center d-flex mb-n2  user-title">
 							<div class="d-inline-block word-clamp-40 mb-0 mr-1">
 								<div class="d-inline-block word-clamp-40">
-									<h5 class="d-inline-block item-title mb-0 mr-1 word-clamp-40 text-profile-one">Lana Ketty</h5>
+									<h5 class="d-inline-block item-title mb-0 mr-1 word-clamp-40 text-profile-one">Soraia Pilantir</h5>
 								</div>
 							</div>
 							<div>
