--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 						<div style="left:-4px;top:-4px;">
 							<div>
 								<figure class="d-inline-block bg-img-profile live-indicator">
-									<img class="avatar rounded-circle" src="images/foto-perfil.jpeg" id="FotoPerfil" style="max-width:96px;min-height:96px;min-width:96px;">
+									<img class="avatar rounded-circle" src="https://imgur.com/a/6ItPh2x" id="FotoPerfil" style="max-width:96px;min-height:96px;min-width:96px;">
 									<div class="border-profile"></div>
 									<span class="live-badge">AO VIVO</span>
 								</figure>
