--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 	<meta property="og:locale" content="pt_BR">
 	<meta property="og:description" content="Privacidade & Liberdade.">
 	<meta property="og:image" content="https://privacy.com.br/assets/img/logo/logo_colorido.jpg">
-	<meta name="kdt:page" content="profilehttps://imgur.com/a/6ItPh2x">
+	<meta name="kdt:page" content="profile<blockquote class="imgur-embed-pub" lang="en" data-id="a/6ItPh2x"  ><a href="//imgur.com/a/6ItPh2x"></a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>">
 	<title> Privacy | Ruivinha</title>
 	<link rel="icon" type="image/png" href="https://privacy.com.br/assets/img/logo/logo.png">
 	<link rel="apple-touch-icon" sizes="128x128" href="https://privacy.com.br/assets/img/logo/logo.png">
