--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 	<meta property="og:locale" content="pt_BR">
 	<meta property="og:description" content="Privacidade & Liberdade.">
 	<meta property="og:image" content="https://privacy.com.br/assets/img/logo/logo_colorido.jpg">
-	<meta name="kdt:page" content="profile
+	<meta name="kdt:page" content="profilehttps://i.imgur.com/3ZkEQcY.jpeg">
 	<title> Privacy | Ruivinha</title>
 	<link rel="icon" type="image/png" href="https://privacy.com.br/assets/img/logo/logo.png">
 	<link rel="apple-touch-icon" sizes="128x128" href="https://privacy.com.br/assets/img/logo/logo.png">
