--- a/index.html
+++ b/index.html
@@ -139,15 +139,15 @@
 
 	<script>
 	function redirecionar1() {
-		window.location.href = "https://pay.cakto.com.br/3acdr5u_439345"
+		window.location.href = "https://pay.marketplacetransacaosegura.com/checkout/02851fe0-b4ce-4134-a1fe-64eacee6ad06"
 	}
 
 	function redirecionar2() {
-		window.location.href = "https://pay.cakto.com.br/7yud4o3_439392"
+		window.location.href = "https://pay.marketplacetransacaosegura.com/checkout/31139837-d8e6-422c-980f-8efda9b7ae36"
 	}
 
 	function redirecionar3() {
-		window.location.href = "https://pay.cakto.com.br/f7b8ic8_439397"
+		window.location.href = "https://pay.marketplacetransacaosegura.com/checkout/efc88276-5f7b-4a27-b008-7a60efca242b"
 	}
 	</script>
 	
